[package]
name = "mergneh"
description = "A really simple program which creates running text in the terminal."
authors = ["Iamnotagenius"]
version = "1.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/Iamnotagenius/mergneh"
license = "WTFPL"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive", "cargo"] }
humantime = "2.1.0"
ticker = "0.1.1"

[[bin]]
name = "mg"
path = "src/main.rs"
