[package]
name = "mergneh"
description = "A really simple program which creates running text in the terminal."
authors = ["Iamnotagenius"]
version = "1.3.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/Iamnotagenius/mergneh"
license = "WTFPL"

[dependencies]
anyhow = "1.0.81"
bitflags = "2.5.0"
chrono = { version = "0.4.37", optional = true }
clap = { version = "4.5.4", features = ["derive", "cargo"] }
humantime = "2.1.0"
mpd = { version = "0.1.0", optional = true }
ticker = "0.1.1"

[[bin]]
name = "mg"
path = "src/main.rs"

[features]
mpd = [ "dep:mpd", "dep:chrono" ]
